# gloss-word

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: linter.yml  periodic-test.yml  test-weekly.yml
src/: cache.rs  lib.rs  main.rs
