[package]
name = "gloss-word"
version = "0.3.3"
authors = ["Theo Beers <theo.beers@drexel.edu>"]
edition = "2024"
categories = ["command-line-utilities"]
description = "A simple English dictionary lookup utility"
homepage = "https://github.com/theodore-s-beers/gloss-word"
keywords = ["definition", "dictionary", "etymology"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/theodore-s-beers/gloss-word"
exclude = ["og.png"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["cargo"] }
directories = "6.0.0"
indicatif = "0.18.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = "0.24"
tempfile = "3.23.0"
trash = "5.2.3"

[[bin]]
name = "gloss"
path = "src/main.rs"
