[package]
name = "gloss-word"
version = "0.3.4"
authors = ["Theo Beers <theo.beers@fu-berlin.de>"]
edition = "2024"
categories = ["command-line-utilities"]
description = "A simple English dictionary lookup utility"
homepage = "https://github.com/theodore-s-beers/gloss-word"
keywords = ["definition", "dictionary", "etymology"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/theodore-s-beers/gloss-word"
exclude = ["og.png"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["cargo"] }
directories = "6.0.0"
indicatif = "0.18.5"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["blocking"] }
rusqlite = { version = "0.40", features = ["bundled"] }
scraper = "0.27"
trash = "5.2.6"

[[bin]]
name = "gloss"
path = "src/main.rs"
